force-app/main/default/objects/Team__c/fields/ImageID__c.field-meta.xml
<CustomField>
    <fullName>ImageID__c</fullName>
    <label>ImageID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>