force-app/main/default/objects/Team__c/fields/TeamId__c.field-meta.xml
<CustomField>
    <fullName>TeamId__c</fullName>
    <label>TeamId</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>